no pude hacer andar el cambiar contraseña muy bien, no se porque redirige a donde quiere por mas que este pisando el controlador

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -81,4 +81,4 @@ fos_user:
         sender_name: "%mailer_user%"
     registration:
         form:
-            type: AppBundle\Form\RegistrationType
+            type: AppBundle\Form\RegistrationFormType
