--- a/app/config/services.yml
+++ b/app/config/services.yml
@@ -43,7 +43,11 @@ services:
       alias: fos_user.mailer.default
       public: true
 
+    FOS\UserBundle\Form\Factory\FactoryInterface:
+      alias: fos_user.change_password.form.factory
+      public: true
+
     app.form.registration:
-        class: AppBundle\Form\RegistrationType
+        class: AppBundle\Form\RegistrationFormType
         tags:
             - { name: form.type, alias: app_user_registration }
