solucionado estilos en el cambiar contraseña

--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -9,6 +9,9 @@ fos_user_registration_register:
      resource: "routingRegistration.xml"
      prefix: /user
 
+fos_user_change_password:
+    resource: "FOSchangePassword.xml"
+
 #
 # fos_user_registration_confirm:
 #     resource: "@FOSUserBundle/Resources/config/routing/registration.xml"
